--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
           <h2 class="visually-hidden">List</h2>
           <ul class="info list">
             <li class="info-card">
+              <div class="icon-container">
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64">
+                  <use href="./images/icons.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="list-header">Strategy</h3>
               <p class="list-text">
                 Our goal is to identify the business problem to walk away with
@@ -89,6 +94,11 @@
             </li>
 
             <li class="info-card">
+              <div class="icon-container">
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64">
+                  <use href="./images/icons.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="list-header">Punctuality</h3>
               <p class="list-text">
                 Bring the key message to the brand's audience for the best price
@@ -97,6 +107,11 @@
             </li>
 
             <li class="info-card">
+              <div class="icon-container">
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64">
+                  <use href="./images/icons.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="list-header">Diligence</h3>
               <p class="list-text">
                 Research and confirm brands that present the strongest digital
@@ -105,6 +120,11 @@
             </li>
 
             <li class="info-card">
+              <div class="icon-container">
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64">
+                  <use href="./images/icons.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="list-header">Technologies</h3>
               <p class="list-text">
                 Design practice focused on digital experiences. We bring forth a
