Section Four Update

--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
       <section class="fourth-section">
         <div class="container">
           <h2 class="header-title">Our Team</h2>
+
+          <!-- Team Member 1 -->
           <ul class="team list">
             <li class="team-member">
               <img
@@ -172,8 +174,69 @@
                 <h3 class="list-header">Mark Guerrero</h3>
                 <p class="list-text">Product Designer</p>
               </div>
+              <!-- HW4 Socmed SVG Icons -->
+              <div class="socmed">
+                <ul class="socmed-info">
+                  <!-- Instagram -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <!-- Twitter -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <!-- Facebook -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <!-- LinkedIn -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
+            <!-- Team Member 2 -->
             <li class="team-member">
               <img
                 src="./images/smiling-man.jpg"
@@ -184,8 +247,69 @@
                 <h3 class="list-header">Tom Ford</h3>
                 <p class="list-text">Frontend Developer</p>
               </div>
+              <!-- HW4 Socmed SVG Icons -->
+              <div class="socmed">
+                <ul class="socmed-info">
+                  <!-- Instagram -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <!-- Twitter -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <!-- Facebook -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <!-- LinkedIn -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
+            <!-- Team Member 3 -->
             <li class="team-member">
               <img
                 src="./images/girl-pink-shirt.jpg"
@@ -196,8 +320,69 @@
                 <h3 class="list-header">Camila Garcia</h3>
                 <p class="list-text">Marketing</p>
               </div>
+              <!-- HW4 Socmed SVG Icons -->
+              <div class="socmed">
+                <ul class="socmed-info">
+                  <!-- Instagram -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <!-- Twitter -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <!-- Facebook -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <!-- LinkedIn -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
+            <!-- Team Member 4 -->
             <li class="team-member">
               <img
                 src="./images/man-gray-shirt.jpg"
@@ -207,6 +392,66 @@
               <div class="member-info">
                 <h3 class="list-header">Daniel Wilson</h3>
                 <p class="list-text">UI Designer</p>
+              </div>
+              <!-- HW4 Socmed SVG Icons -->
+              <div class="socmed">
+                <ul class="socmed-info">
+                  <!-- Instagram -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <!-- Twitter -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <!-- Facebook -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <!-- LinkedIn -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
