--- a/index.html
+++ b/index.html
@@ -172,65 +172,65 @@
               />
               <div class="member-info">
                 <h3 class="list-header">Mark Guerrero</h3>
+                <p class="list-text">Product Designer</p>
+                <!-- HW4 Socmed SVG Icons -->
+                <ul class="socmed-info">
+                  <!-- Instagram -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                <div class="socmed">
-                  <ul class="socmed-info">
-                    <li class="socmed-items">
-                      <a href="" class="socmed-link">
-                        <svg
-                          class="socmed-icon"
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#instagram"></use>
-                        </svg>
-                      </a>
-                    </li>
+                  <!-- Twitter -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                    <!-- Twitter -->
-                    <li class="socmed-items">
-                      <a href="" class="socmed-link">
-                        <svg
-                          class="socmed-icon"
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#twitter"></use>
-                        </svg>
-                      </a>
-                    </li>
+                  <!-- Facebook -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                    <!-- Facebook -->
-                    <li class="socmed-items">
-                      <a href="" class="socmed-link">
-                        <svg
-                          class="socmed-icon"
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#facebook"></use>
-                        </svg>
-                      </a>
-                    </li>
-
-                    <!-- LinkedIn -->
-                    <li class="socmed-items">
-                      <a href="" class="socmed-link">
-                        <svg
-                          class="socmed-icon"
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#linkedin"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+                  <!-- LinkedIn -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -245,65 +245,63 @@
                 <h3 class="list-header">Tom Ford</h3>
                 <p class="list-text">Frontend Developer</p>
                 <!-- HW4 Socmed SVG Icons -->
-                <div class="socmed">
-                  <ul class="socmed-info">
-                    <!-- Instagram -->
-                    <li class="socmed-items">
-                      <a href="" class="socmed-link">
-                        <svg
-                          class="socmed-icon"
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#instagram"></use>
-                        </svg>
-                      </a>
-                    </li>
+                <ul class="socmed-info">
+                  <!-- Instagram -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                    <!-- Twitter -->
-                    <li class="socmed-items">
-                      <a href="" class="socmed-link">
-                        <svg
-                          class="socmed-icon"
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#twitter"></use>
-                        </svg>
-                      </a>
-                    </li>
+                  <!-- Twitter -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                    <!-- Facebook -->
-                    <li class="socmed-items">
-                      <a href="" class="socmed-link">
-                        <svg
-                          class="socmed-icon"
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#facebook"></use>
-                        </svg>
-                      </a>
-                    </li>
+                  <!-- Facebook -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                    <!-- LinkedIn -->
-                    <li class="socmed-items">
-                      <a href="" class="socmed-link">
-                        <svg
-                          class="socmed-icon"
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#linkedin"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+                  <!-- LinkedIn -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -318,65 +316,63 @@
                 <h3 class="list-header">Camila Garcia</h3>
                 <p class="list-text">Marketing</p>
                 <!-- HW4 Socmed SVG Icons -->
-                <div class="socmed">
-                  <ul class="socmed-info">
-                    <!-- Instagram -->
-                    <li class="socmed-items">
-                      <a href="" class="socmed-link">
-                        <svg
-                          class="socmed-icon"
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#instagram"></use>
-                        </svg>
-                      </a>
-                    </li>
+                <ul class="socmed-info">
+                  <!-- Instagram -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                    <!-- Twitter -->
-                    <li class="socmed-items">
-                      <a href="" class="socmed-link">
-                        <svg
-                          class="socmed-icon"
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#twitter"></use>
-                        </svg>
-                      </a>
-                    </li>
+                  <!-- Twitter -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                    <!-- Facebook -->
-                    <li class="socmed-items">
-                      <a href="" class="socmed-link">
-                        <svg
-                          class="socmed-icon"
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#facebook"></use>
-                        </svg>
-                      </a>
-                    </li>
+                  <!-- Facebook -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                    <!-- LinkedIn -->
-                    <li class="socmed-items">
-                      <a href="" class="socmed-link">
-                        <svg
-                          class="socmed-icon"
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#linkedin"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+                  <!-- LinkedIn -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -391,65 +387,63 @@
                 <h3 class="list-header">Daniel Wilson</h3>
                 <p class="list-text">UI Designer</p>
                 <!-- HW4 Socmed SVG Icons -->
-                <div class="socmed">
-                  <ul class="socmed-info">
-                    <!-- Instagram -->
-                    <li class="socmed-items">
-                      <a href="" class="socmed-link">
-                        <svg
-                          class="socmed-icon"
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#instagram"></use>
-                        </svg>
-                      </a>
-                    </li>
+                <ul class="socmed-info">
+                  <!-- Instagram -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                    <!-- Twitter -->
-                    <li class="socmed-items">
-                      <a href="" class="socmed-link">
-                        <svg
-                          class="socmed-icon"
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#twitter"></use>
-                        </svg>
-                      </a>
-                    </li>
+                  <!-- Twitter -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                    <!-- Facebook -->
-                    <li class="socmed-items">
-                      <a href="" class="socmed-link">
-                        <svg
-                          class="socmed-icon"
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#facebook"></use>
-                        </svg>
-                      </a>
-                    </li>
+                  <!-- Facebook -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                    <!-- LinkedIn -->
-                    <li class="socmed-items">
-                      <a href="" class="socmed-link">
-                        <svg
-                          class="socmed-icon"
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                        >
-                          <use href="./images/icons.svg#linkedin"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+                  <!-- LinkedIn -->
+                  <li class="socmed-items">
+                    <a href="" class="socmed-link">
+                      <svg
+                        class="socmed-icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
